include/ciaaw_saw_2021.h

/** @brief C API Object representing an element.*/
struct ciaaw_saw_element_t_2021{
    char element[25]; /**< Element name. */
    char symbol[9]; /**< Element symbol. */
    int z; /**< Element atomic number. */
    double saw_min; /**< Min standard atomic weight. */
    double saw_max; /**< Max standard atomic weight. */
    double saw; /**< Value standard atomic weight. */
    double saw_u; /**< Uncertainty standard atomic weight. */
    double asaw; /**< Abridged value standard atomic weight. */
    double asaw_u; /**< Abridged uncertainty standard atomic weight. */
};
ADD_IMPORT extern const int YEAR_2021; /**< C API Publication year. */
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_H_2021;/**< C API H_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_He_2021;/**< C API He_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Li_2021;/**< C API Li_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Be_2021;/**< C API Be_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_B_2021;/**< C API B_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_C_2021;/**< C API C_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_N_2021;/**< C API N_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_O_2021;/**< C API O_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_F_2021;/**< C API F_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ne_2021;/**< C API Ne_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Na_2021;/**< C API Na_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Mg_2021;/**< C API Mg_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Al_2021;/**< C API Al_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Si_2021;/**< C API Si_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_P_2021;/**< C API P_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_S_2021;/**< C API S_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cl_2021;/**< C API Cl_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ar_2021;/**< C API Ar_2021.*/