src/ciaaw_saw_2021.f90

!> @file
!> @brief CIAAW Standard Atomic Weights 2021 -autogenerated

!> @brief CIAAW Standard Atomic Weights 2021 - autogenerated.
module ciaaw__saw_2021
use iso_fortran_env
use iso_c_binding
use ieee_arithmetic
implicit none
private

integer(int64), parameter :: x = 1
real(real64), parameter :: nan = transfer(huge(x), 1.0d0)

!> @brief Object representing an element.
type, public :: element_t_2021
character(len=24) :: element !< Element name.
character(len=8) :: symbol !< Element symbol.
integer(int32) :: z !< Element atomic number.
real(real64) :: saw_min !< Min standard atomic weight.
real(real64) :: saw_max !< Max standard atomic weight.
real(real64) :: saw !< Value standard atomic weight.
real(real64) :: saw_u !< Uncertainty standard atomic weight.
real(real64) :: asaw !< Abridged value standard atomic weight.
real(real64) :: asaw_u !< Abridged uncertainty standard atomic weight.
end type

!> @brief Object representing an element.
type, public, bind(C) :: capi_element_t_2021
character(kind=c_char) :: element(25) !< Element name.
character(kind=c_char) :: symbol(9) !< Element symbol.
integer(c_int) :: z !< Element atomic number.
real(c_double) :: saw_min !< Min standard atomic weight.
real(c_double) :: saw_max !< Max standard atomic weight.
real(c_double) :: saw !< Value standard atomic weight.
real(c_double) :: saw_u !< Uncertainty standard atomic weight.
real(c_double) :: asaw !< Abridged value standard atomic weight.
real(c_double) :: asaw_u !< Abridged uncertainty standard atomic weight.
end type

integer(int32), parameter, public :: YEAR_2021 = 2021 !< Year of saw
integer(c_int), protected, public, bind(C,name="YEAR_2021") ::capi_YEAR_2021 = YEAR_2021 !< C API Year of saw

!> hydrogen.
type(element_t_2021), parameter, public :: H_2021 =&
element_t_2021("hydrogen","H", 1, 1.00784d0, 1.00811d0, 1.00798d0, 0.00008d0, 1.0080d0, 0.0002d0)
!> C API hydrogen.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_H_2021") :: capi_H_2021 =&
capi_element_t_2021(&
["h","y","d","r","o","g","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H",c_null_char, " "," "," "," "," "," "," "], &
H_2021%z, &
H_2021%saw_max, H_2021%saw_min, H_2021%saw, H_2021%saw_u, H_2021%asaw, H_2021%asaw_u)

!> helium.
type(element_t_2021), parameter, public :: He_2021 =&
element_t_2021("helium","He", 2, nan, nan, 4.002602d0, 0.000002d0, 4.0026d0, 0.0001d0)
!> C API helium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_He_2021") :: capi_He_2021 =&
capi_element_t_2021(&
["h","e","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","e",c_null_char, " "," "," "," "," "," "], &
He_2021%z, &
He_2021%saw_max, He_2021%saw_min, He_2021%saw, He_2021%saw_u, He_2021%asaw, He_2021%asaw_u)

!> lithium.
type(element_t_2021), parameter, public :: Li_2021 =&
element_t_2021("lithium","Li", 3, 6.938d0, 6.997d0, 6.97d0, 0.02d0, 6.94d0, 0.06d0)
!> C API lithium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Li_2021") :: capi_Li_2021 =&
capi_element_t_2021(&
["l","i","t","h","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","i",c_null_char, " "," "," "," "," "," "], &
Li_2021%z, &
Li_2021%saw_max, Li_2021%saw_min, Li_2021%saw, Li_2021%saw_u, Li_2021%asaw, Li_2021%asaw_u)

!> beryllium.
type(element_t_2021), parameter, public :: Be_2021 =&
element_t_2021("beryllium","Be", 4, nan, nan, 9.0121831d0, 0.0000005d0, 9.0122d0, 0.00001d0)
!> C API beryllium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Be_2021") :: capi_Be_2021 =&
capi_element_t_2021(&
["b","e","r","y","l","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","e",c_null_char, " "," "," "," "," "," "], &
Be_2021%z, &
Be_2021%saw_max, Be_2021%saw_min, Be_2021%saw, Be_2021%saw_u, Be_2021%asaw, Be_2021%asaw_u)

!> boron.
type(element_t_2021), parameter, public :: B_2021 =&
element_t_2021("boron","B", 5, 10.806d0, 10.821d0, 10.813d0, 0.005d0, 10.81d0, 0.02d0)
!> C API boron.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_B_2021") :: capi_B_2021 =&
capi_element_t_2021(&
["b","o","r","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B",c_null_char, " "," "," "," "," "," "," "], &
B_2021%z, &
B_2021%saw_max, B_2021%saw_min, B_2021%saw, B_2021%saw_u, B_2021%asaw, B_2021%asaw_u)

!> carbon.
type(element_t_2021), parameter, public :: C_2021 =&
element_t_2021("carbon","C", 6, 12.0096d0, 12.0116d0, 12.0106d0, 0.0006d0, 12.011d0, 0.002d0)
!> C API carbon.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_C_2021") :: capi_C_2021 =&
capi_element_t_2021(&
["c","a","r","b","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C",c_null_char, " "," "," "," "," "," "," "], &
C_2021%z, &
C_2021%saw_max, C_2021%saw_min, C_2021%saw, C_2021%saw_u, C_2021%asaw, C_2021%asaw_u)

!> nitrogen.
type(element_t_2021), parameter, public :: N_2021 =&
element_t_2021("nitrogen","N", 7, 14.00643d0, 14.00728d0, 14.0069d0, 0.0003d0, 14.007d0, 0.001d0)
!> C API nitrogen.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_N_2021") :: capi_N_2021 =&
capi_element_t_2021(&
["n","i","t","r","o","g","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N",c_null_char, " "," "," "," "," "," "," "], &
N_2021%z, &
N_2021%saw_max, N_2021%saw_min, N_2021%saw, N_2021%saw_u, N_2021%asaw, N_2021%asaw_u)

!> oxygen.
type(element_t_2021), parameter, public :: O_2021 =&
element_t_2021("oxygen","O", 8, 15.99903d0, 15.99977d0, 15.9994d0, 0.0003d0, 15.999d0, 0.001d0)
!> C API oxygen.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_O_2021") :: capi_O_2021 =&
capi_element_t_2021(&
["o","x","y","g","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O",c_null_char, " "," "," "," "," "," "," "], &
O_2021%z, &
O_2021%saw_max, O_2021%saw_min, O_2021%saw, O_2021%saw_u, O_2021%asaw, O_2021%asaw_u)

!> fluorine.
type(element_t_2021), parameter, public :: F_2021 =&
element_t_2021("fluorine","F", 9, nan, nan, 18.998403162d0, 0.000000005d0, 18.998d0, 0.001d0)
!> C API fluorine.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_F_2021") :: capi_F_2021 =&
capi_element_t_2021(&
["f","l","u","o","r","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F",c_null_char, " "," "," "," "," "," "," "], &
F_2021%z, &
F_2021%saw_max, F_2021%saw_min, F_2021%saw, F_2021%saw_u, F_2021%asaw, F_2021%asaw_u)

!> neon.
type(element_t_2021), parameter, public :: Ne_2021 =&
element_t_2021("neon","Ne", 10, nan, nan, 20.1797d0, 0.0006d0, 20.180d0, 0.001d0)
!> C API neon.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ne_2021") :: capi_Ne_2021 =&
capi_element_t_2021(&
["n","e","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","e",c_null_char, " "," "," "," "," "," "], &
Ne_2021%z, &
Ne_2021%saw_max, Ne_2021%saw_min, Ne_2021%saw, Ne_2021%saw_u, Ne_2021%asaw, Ne_2021%asaw_u)

!> sodium.
type(element_t_2021), parameter, public :: Na_2021 =&
element_t_2021("sodium","Na", 11, nan, nan, 22.98976928d0, 0.00000002d0, 22.990d0, 0.001d0)
!> C API sodium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Na_2021") :: capi_Na_2021 =&
capi_element_t_2021(&
["s","o","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","a",c_null_char, " "," "," "," "," "," "], &
Na_2021%z, &
Na_2021%saw_max, Na_2021%saw_min, Na_2021%saw, Na_2021%saw_u, Na_2021%asaw, Na_2021%asaw_u)

!> magnesium.
type(element_t_2021), parameter, public :: Mg_2021 =&
element_t_2021("magnesium","Mg", 12, 24.304d0, 24.307d0, 24.3055d0, 0.0009d0, 24.305d0, 0.002d0)
!> C API magnesium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Mg_2021") :: capi_Mg_2021 =&
capi_element_t_2021(&
["m","a","g","n","e","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","g",c_null_char, " "," "," "," "," "," "], &
Mg_2021%z, &
Mg_2021%saw_max, Mg_2021%saw_min, Mg_2021%saw, Mg_2021%saw_u, Mg_2021%asaw, Mg_2021%asaw_u)

!> aluminium.
type(element_t_2021), parameter, public :: Al_2021 =&
element_t_2021("aluminium","Al", 13, nan, nan, 26.9815384d0, 0.0000003d0, 26.982d0, 0.001d0)
!> C API aluminium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Al_2021") :: capi_Al_2021 =&
capi_element_t_2021(&
["a","l","u","m","i","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","l",c_null_char, " "," "," "," "," "," "], &
Al_2021%z, &
Al_2021%saw_max, Al_2021%saw_min, Al_2021%saw, Al_2021%saw_u, Al_2021%asaw, Al_2021%asaw_u)

!> silicon.
type(element_t_2021), parameter, public :: Si_2021 =&
element_t_2021("silicon","Si", 14, 28.084d0, 28.086d0, 28.0850d0, 0.0006d0, 28.085d0, 0.001d0)
!> C API silicon.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Si_2021") :: capi_Si_2021 =&
capi_element_t_2021(&
["s","i","l","i","c","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","i",c_null_char, " "," "," "," "," "," "], &
Si_2021%z, &
Si_2021%saw_max, Si_2021%saw_min, Si_2021%saw, Si_2021%saw_u, Si_2021%asaw, Si_2021%asaw_u)

!> phosphorus.
type(element_t_2021), parameter, public :: P_2021 =&
element_t_2021("phosphorus","P", 15, nan, nan, 30.973761998d0, 0.000000005d0, 30.974d0, 0.001d0)
!> C API phosphorus.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_P_2021") :: capi_P_2021 =&
capi_element_t_2021(&
["p","h","o","s","p","h","o","r","u","s",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P",c_null_char, " "," "," "," "," "," "," "], &
P_2021%z, &
P_2021%saw_max, P_2021%saw_min, P_2021%saw, P_2021%saw_u, P_2021%asaw, P_2021%asaw_u)

!> sulfur.
type(element_t_2021), parameter, public :: S_2021 =&
element_t_2021("sulfur","S", 16, 32.059d0, 32.076d0, 32.067d0, 0.005d0, 32.06d0, 0.02d0)
!> C API sulfur.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_S_2021") :: capi_S_2021 =&
capi_element_t_2021(&
["s","u","l","f","u","r",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S",c_null_char, " "," "," "," "," "," "," "], &
S_2021%z, &
S_2021%saw_max, S_2021%saw_min, S_2021%saw, S_2021%saw_u, S_2021%asaw, S_2021%asaw_u)

!> chlorine.
type(element_t_2021), parameter, public :: Cl_2021 =&
element_t_2021("chlorine","Cl", 17, 35.446d0, 35.457d0, 35.451d0, 0.004d0, 35.45d0, 0.01d0)
!> C API chlorine.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cl_2021") :: capi_Cl_2021 =&
capi_element_t_2021(&
["c","h","l","o","r","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","l",c_null_char, " "," "," "," "," "," "], &
Cl_2021%z, &
Cl_2021%saw_max, Cl_2021%saw_min, Cl_2021%saw, Cl_2021%saw_u, Cl_2021%asaw, Cl_2021%asaw_u)

!> argon.
type(element_t_2021), parameter, public :: Ar_2021 =&
element_t_2021("argon","Ar", 18, 39.792d0, 39.963d0, 39.88d0, 0.05d0, 39.95d0, 0.16d0)
!> C API argon.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ar_2021") :: capi_Ar_2021 =&
capi_element_t_2021(&
["a","r","g","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","r",c_null_char, " "," "," "," "," "," "], &
Ar_2021%z, &
Ar_2021%saw_max, Ar_2021%saw_min, Ar_2021%saw, Ar_2021%saw_u, Ar_2021%asaw, Ar_2021%asaw_u)
